--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^3.26.7",
     "node-sass": "^4.13.1",
+    "query-string": "^6.12.1",
+    "rc-pagination": "^2.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-player": "^1.15.2",
